--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
@@ -19,6 +20,7 @@
     "i18n-js": "^3.8.0",
     "i18next": "^19.8.4",
     "lodash.memoize": "^4.1.2",
+    "parse": "^2.19.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-i18next": "^11.7.3",
